View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023597 | Community | OCCT:Data Exchange | public | 2012-11-28 14:06 | 2013-04-29 15:21 |
Reporter | Roman Lygin | Assigned To | Roman Lygin | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023597: Failed to export ellipse into STEP with units other than mm | ||||
Description | Exception occurs in UnitsMethods::RadianToDegree() when calling Geom2d_Ellipse::SetMajorRadius() which after scaling becomes smaller than minor, and Geom2d_Ellipse does not provide API to set two radii at once. | ||||
Steps To Reproduce | pload ALL xnorm STEP restore f-ellipse.brep f param write.step.unit FT newmodel stepwrite a f f-ellipse.stp | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde(005) bug23597 | ||||
|
f-ellipse.zip (391 bytes) |
|
Pushed branch CR23597 into the git repository |
|
Branch CR23597 is ready for tests. |
|
Dear BugMaster, Branch CR23597 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs xde(005) bug23597 - OK. |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-11-28 14:06 | Roman Lygin | New Issue | |
2012-11-28 14:06 | Roman Lygin | Assigned To | => gka |
2012-11-28 14:06 | Roman Lygin | File Added: f-ellipse.zip | |
2012-11-28 14:09 | Roman Lygin | Note Added: 0022409 | |
2012-11-28 14:09 | Roman Lygin | Status | new => resolved |
2012-11-28 16:54 | gka | Note Added: 0022414 | |
2012-11-28 16:54 | gka | Status | resolved => reviewed |
2012-11-28 17:50 |
|
Assigned To | gka => mkv |
2012-12-04 18:19 |
|
Note Added: 0022549 | |
2012-12-04 18:19 |
|
Test case number | => bugs xde(005) bug23597 |
2012-12-04 18:19 |
|
Assigned To | mkv => bugmaster |
2012-12-04 18:19 |
|
Status | reviewed => tested |
2012-12-10 17:16 | Roman Lygin | Changeset attached | => occt master 72ae9895 |
2012-12-10 17:16 | Roman Lygin | Assigned To | bugmaster => Roman Lygin |
2012-12-10 17:16 | Roman Lygin | Status | tested => verified |
2012-12-10 17:16 | Roman Lygin | Resolution | open => fixed |
2013-04-23 13:37 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |