0023597: Failed to export ellipse into STEP with units other than mm Test case for this bug